src-tauri/rebuild_error_utf8.txt
cargo :     Blocking waiting for fil
e lock on build directory
At line:1 char:1
+ cargo check 2>&1 | Out-File -FileP
ath rebuild_error_utf8.txt -Encodin 
...
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSp 
   ecified: (    Blocking wa...bui  
  ld directory:String) [], Remote   
 Exception
    + FullyQualifiedErrorId : Nativ 
   eCommandError
 
    Checking corex v0.1.0 (E:\ai-des
ktop\local-ai\src-tauri)
warning: use of deprecated unit vari
ant `llama_cpp_2::model::Special::To
kenize`: This enum is a mixture of o
ptions for llama cpp providing less 
flexibility it only used with deprec
ated methods and will be removed in 
the future.
   --> src\gguf.rs:433:74
    |
433 |         match model.token_to_s
tr(*token_id, llama_cpp_2::model::Sp
ecial::Tokenize) {
    |                               
                                    
       ^^^^^^^^
    |
    = note: `#[warn(deprecated)]` on
 by default

warning: use of deprecated method `l
lama_cpp_2::model::LlamaModel::token
_to_str`: Use `token_to_piece` inste
ad
   --> src\gguf.rs:433:21
    |
433 |         match model.token_to_s
tr(*token_id, llama_cpp_2::model::Sp
ecial::Tokenize) {
    |                     ^^^^^^^^^^
^^

warning: `corex` (lib) generated 2 w
arnings
warning: unused import: `error`
  --> src\collab.rs:20:18
   |
20 | use log::{debug, error, info, w
arn};
   |                  ^^^^^
   |
   = note: `#[warn(unused_imports)]`
 (part of `#[warn(unused)]`) on by d
efault

warning: unused imports: `Duration` 
and `interval`
  --> src\collab.rs:21:19
   |
21 | use tokio::time::{interval, Dur
ation};
   |                   ^^^^^^^^  ^^^
^^^^^

warning: unused import: `tokio_tungs
tenite::tungstenite::Message`
  --> src\collab.rs:22:5
   |
22 | use tokio_tungstenite::tungsten
ite::Message;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^

error[E0609]: no field `model_path` 
on type `std::sync::MutexGuard<'_, G
gufState>`
   --> src\main.rs:163:30
    |
163 |                     if state.m
odel_path.is_some() {
    |                              ^
^^^^^^^^^ unknown field
    |
    = note: available fields are: `b
ackend`, `models`, `backend_initiali
zed`

error[E0609]: no field `model_path` 
on type `std::sync::MutexGuard<'_, G
gufState>`
   --> src\main.rs:165:31
    |
165 |                         state.
model_path = None;
    |                               
^^^^^^^^^^ unknown field
    |
    = note: available fields are: `b
ackend`, `models`, `backend_initiali
zed`

error[E0609]: no field `n_ctx` on ty
pe `std::sync::MutexGuard<'_, GgufSt
ate>`
   --> src\main.rs:166:31
    |
166 |                         state.
n_ctx = 4096;
    |                               
^^^^^ unknown field
    |
    = note: available fields are: `b
ackend`, `models`, `backend_initiali
zed`

error[E0609]: no field `n_gpu_layers
` on type `std::sync::MutexGuard<'_,
 GgufState>`
   --> src\main.rs:167:31
    |
167 |                         state.
n_gpu_layers = 0;
    |                               
^^^^^^^^^^^^ unknown field
    |
    = note: available fields are: `b
ackend`, `models`, `backend_initiali
zed`

warning: unused import: `SinkExt`
  --> src\collab.rs:13:20
   |
13 | use futures_util::{SinkExt, Str
eamExt};
   |                    ^^^^^^^

warning: unused import: `StreamExt`
  --> src\collab.rs:13:29
   |
13 | use futures_util::{SinkExt, Str
eamExt};
   |                             ^^^
^^^^^^

For more information about this erro
r, try `rustc --explain E0609`.
warning: `corex` (bin "corex") gener
ated 7 warnings (2 duplicates)
error: could not compile `corex` (bi
n "corex") due to 4 previous errors;
 7 warnings emitted
